MDEV-5743 Server crashes in mysql_alter_table on an attempt to add a primary key to InnoDB table